# WfmOxide

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  shell.nix.dist
.github/workflows/: CI.yml  release.yml
python/tests/: test_all.py
python/wfm_oxide/: __init__.py
src/: lib.rs  mmap.rs  parser.rs  structs.rs
test_data/: tek_002.wfm  tek_003.wfm  tek_realistic.isf  tek_synth.isf  tek_synth_8bit.isf
tests/: benchmark_wfm.py  test_parsing.py
