[package]
name = "wfm_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wfm_oxide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
numpy = "0.23.0"
memmap2 = "0.9.3"
binrw = "0.13.3"
anyhow = "1.0.75"
# rayon = "1.8.0" # Potential for parallel conversion in Phase 3
