[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wfm_oxide"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
    "RigolWFM",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wfm_oxide._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
